<resources>
    <string name="app_name">My app</string>
    <string name="Login_heading">Login</string>
    <string name="Login_username">Username</string>
    <string name="Login_username_username" />
    <string name="Login_password">Password</string>
    <string name="Login_forgot_password">Forgot password?</string>
    <string name="Login_button_login">Login</string>
    <string name="Login_text">Or Sign Up Using</string>
    <string name="or_why_not_signup">Or why not: <b>SignUp</b>?</string>
    <string name="signup">SignUp</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="your_email">Your Email</string>
    <string name="choose_your_password">Choose your password</string>
    <string name="your_awesome_username">Your awesome username</string>
    <string name="singup">SignUp</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Christopher</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_your_password_no_problem">Forgot your password? No problem!</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
</resources>