<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/emailUser"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
android:paddingBottom="20dp"
        android:text="@string/Login_heading" />

    <TextView
        android:id="@+id/textView2"
        style="@style/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_username" />

    <LinearLayout
        style="@style/horizontalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="Type your Email"
            android:inputType="textEmailAddress"
            android:text="@string/Login_username_username" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        style="@style/divider"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView4"
        style="@style/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/Login_password" />

    <LinearLayout
        style="@style/horizontalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="Type your password"
            android:inputType="textPassword" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        style="@style/divider"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:text="@string/Login_forgot_password" />

    <Button
        android:id="@+id/login_btn_login"
        style="@style/loginButton"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/Login_button_login"
        />

<!--    <TextView-->
<!--        android:id="@+id/textView6"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:paddingTop="30dp"-->
<!--        android:paddingBottom="20dp"-->
<!--        android:text="@string/Login_text" />-->


    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingTop="30dp"
        android:text="@string/or_why_not_signup"
        android:textAlignment="center" />


</LinearLayout>